<resources>
    <string name="app_name">EquipesRoom</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="add">ADD</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome:</string>
    <string name="nome_equipe">Nome equipe</string>
    <string name="estadio">Estádio:</string>
    <string name="estadio_equipe">Estádio equipe</string>
    <string name="ano_de_fundacao">Ano de Fundação</string>
    <string name="ano_de_fundacao_da_equipe">Ano de Fundação da Equipe</string>
</resources>